add coloured balls

--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href= "styles.css" rel= "stylesheet" type= "text/css"> 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Snooker Counter</title>
 </head>
 <body>
-  <h1>Suppies</h1>
+  <h1>Snooker Counter</h1>
+  <div class = "container">
+    <div class= "balls" id = 'red-ball'>
+    </div>
+    <div class = "balls" id ='yellow-ball'>
+    </div>    
+    <div class= "balls" id= 'green-ball'>
+    </div>
+    <div class = "balls" id= 'brown-ball'>
+    </div>    
+    <div class= "balls" id= 'blue-ball'>
+    </div>
+    <div class = "balls" id= 'pink-ball'>
+    </div>
+    <div class= "balls" id= 'black-ball'>
+    </div>
+  </div>
 </body>
 </html>
