add pool felt background

--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
   <title>Snooker Counter</title>
 </head>
 <body>
-  <h1>Snooker Counter</h1>
-  <div class = "container">
-    <div class= "balls" id = 'red-ball'>
-    </div>
-    <div class = "balls" id ='yellow-ball'>
-    </div>    
-    <div class= "balls" id= 'green-ball'>
-    </div>
-    <div class = "balls" id= 'brown-ball'>
-    </div>    
-    <div class= "balls" id= 'blue-ball'>
-    </div>
-    <div class = "balls" id= 'pink-ball'>
-    </div>
-    <div class= "balls" id= 'black-ball'>
+  <img src = 'images/table-felt.jpg' alt='table felt'>
+    <div class= "responsive">
+    <h1>Snooker Counter</h1>
+    <div class = "container">
+      <div class= "balls" id = 'red-ball'>
+      </div>
+      <div class = "balls" id ='yellow-ball'>
+      </div>    
+      <div class= "balls" id= 'green-ball'>
+      </div>
+      <div class = "balls" id= 'brown-ball'>
+      </div>    
+      <div class= "balls" id= 'blue-ball'>
+      </div>
+      <div class = "balls" id= 'pink-ball'>
+      </div>
+      <div class= "balls" id= 'black-ball'>
+      </div>
     </div>
   </div>
 </body>
