add score boxes, ball spacing

--- a/index.html
+++ b/index.html
@@ -9,24 +9,23 @@
 </head>
 <body>
   <img src = 'images/table-felt.jpg' alt='table felt'>
-    <div class= "responsive">
-    <h1>Snooker Counter</h1>
-    <div class = "container">
-      <div class= "balls" id = 'red-ball'>
-      </div>
-      <div class = "balls" id ='yellow-ball'>
-      </div>    
-      <div class= "balls" id= 'green-ball'>
-      </div>
-      <div class = "balls" id= 'brown-ball'>
-      </div>    
-      <div class= "balls" id= 'blue-ball'>
-      </div>
-      <div class = "balls" id= 'pink-ball'>
-      </div>
-      <div class= "balls" id= 'black-ball'>
-      </div>
-    </div>
+  <h1>Snooker Counter</h1>
+  <div class= 'container'>
+    <span class= 'total-score' id= "player-1">
+        PLAYER 1
+    </span>
+    <span class= 'total-score' id= "player-2"> 
+        PLAYER 2
+    </span>
+  </div>
+  <div class= "container">
+    <div class= "balls" id= 'red-ball'>16</div>
+    <div class= "balls" id='yellow-ball'></div>    
+    <div class= "balls" id= 'green-ball'></div>
+    <div class= "balls" id= 'brown-ball'></div>    
+    <div class= "balls" id= 'blue-ball'></div>
+    <div class= "balls" id= 'pink-ball'></div>
+    <div class= "balls" id= 'black-ball'></div>
   </div>
 </body>
 </html>
