--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
   <h1>Snooker Counter</h1>
   <div class= 'container'>
     <span class= 'total-score' id= "player-1">
+      <h4>
         PLAYER 1
+      </h4>
+      <h1 id = 'player1Score'>
+      </h1>
     </span>
     <span class= 'total-score' id= "player-2"> 
+      <h4>
         PLAYER 2
+      </h4>
+      <h1 id = 'player2Score'>
+      </h1>
     </span>
   </div>
   <div class= "container">
@@ -27,5 +35,6 @@
     <div class= "balls" id= 'pink-ball'></div>
     <div class= "balls" id= 'black-ball'></div>
   </div>
+  <script src= 'javascript.js'></script>
 </body>
 </html>
