display totals in player 1 box and ball click functionality

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     </span>
   </div>
   <div class= "container">
-    <div class= "balls" id= 'red-ball'>16</div>
-    <div class= "balls" id='yellow-ball'></div>    
-    <div class= "balls" id= 'green-ball'></div>
-    <div class= "balls" id= 'brown-ball'></div>    
-    <div class= "balls" id= 'blue-ball'></div>
-    <div class= "balls" id= 'pink-ball'></div>
-    <div class= "balls" id= 'black-ball'></div>
+    <div class= "balls" id= 'red'>16</div>
+    <div class= "balls" id='yellow'></div>    
+    <div class= "balls" id= 'green'></div>
+    <div class= "balls" id= 'brown'></div>    
+    <div class= "balls" id= 'blue'></div>
+    <div class= "balls" id= 'pink'></div>
+    <div class= "balls" id= 'black'></div>
   </div>
   <script src= 'javascript.js'></script>
 </body>
