--- a/index.html
+++ b/index.html
@@ -15,15 +15,23 @@
       <h4>
         PLAYER 1
       </h4>
-      <h1 id = 'player1Score'>
-      </h1>
+      <h1 id = 'player1Score'>0</h1>
     </span>
+    <div class = 'info'>
+      <h2>
+        On the Table:
+      </h2>
+      <h1 id = 'currentPlayer'>Player 1</h1>
+      <br>
+      <br>
+      <br>
+      <button id= 'button' type="button">End of Turn</button>
+    </div>
     <span class= 'total-score' id= "player-2"> 
       <h4>
         PLAYER 2
       </h4>
-      <h1 id = 'player2Score'>
-      </h1>
+      <h1 id = 'player2Score'>0</h1>
     </span>
   </div>
   <div class= "container">
