add foul buttons to layout

--- a/index.html
+++ b/index.html
@@ -24,8 +24,34 @@
       <h1 id = 'currentPlayer'>Player 1</h1>
       <br>
       <br>
-      <br>
       <button id= 'button' type="button">End of Turn</button>
+      <br>
+      <br>
+      <br>
+      <br>
+      <h2>Fouls:</h2>
+    </div>
+    <div class= 'fouls-container'>
+      <div id= '7' class= 'fouls'>
+         <h2>
+           7 
+         </h2>
+      </div>
+      <div id= '6' class= 'fouls'>
+        <h2>
+          6
+        </h2>
+      </div>
+      <div id= '5' class= 'fouls'>
+        <h2>
+          5
+        </h2>
+      </div>
+      <div id= '4' class= 'fouls'>
+        <h2>
+          4
+        </h2>
+      </div>
     </div>
     <span class= 'total-score' id= "player-2"> 
       <h4>
