add listener to foul buttons

--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
     </span>
     <div class = 'info'>
       <h2>
-        On the Table:
+        Remaining points on the table:
+        <p id='remainingPoints'>
+          147
+        </p>
       </h2>
+      <h2>Current Player:</h2>
       <h1 id = 'currentPlayer'>Player 1</h1>
       <br>
-      <br>
-      <button id= 'button' type="button">End of Turn</button>
-      <br>
-      <br>
-      <br>
-      <br>
+      <button id= 'button' type="button">End Turn</button>
       <h2>Fouls:</h2>
     </div>
     <div class= 'fouls-container'>
