--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
         PLAYER 1
       </h4>
       <h1 id = 'player1Score'>0</h1>
+      <br>
+      <h5>Current Break:</h5>
+      <h3 id = 'currentBreak1'></h3>
     </span>
     <div class = 'info'>
+      <h2 class= 'playerTitle'>Current Player:</h2>
+      <h1 id = 'currentPlayer'>Player 1</h1>
+      <br>
       <h2>
         Remaining points on the table:
         <p id='remainingPoints'>
-          147
         </p>
       </h2>
-      <h2>Current Player:</h2>
-      <h1 id = 'currentPlayer'>Player 1</h1>
-      <br>
       <button id= 'button' type="button">End Turn</button>
       <h2>Fouls:</h2>
     </div>
@@ -57,6 +59,9 @@
         PLAYER 2
       </h4>
       <h1 id = 'player2Score'>0</h1>
+      <br>
+      <h5>Current Beak:</h5>
+      <h3 id= 'currentBreak2'></h3>
     </span>
   </div>
   <div class= "container">
@@ -67,7 +72,8 @@
     <div class= "balls" id= 'blue'></div>
     <div class= "balls" id= 'pink'></div>
     <div class= "balls" id= 'black'></div>
-  </div>
+    <div class= 'balls' id= 'free'><br>Free</div>
+  
   <script src= 'javascript.js'></script>
 </body>
 </html>
