undo button working

--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
       <button id= 'button' type="button">End Turn</button>
       <h2>Fouls:</h2>
       <div class= 'fouls-container'>
-        <div id= '7' class= 'fouls'>
-        </div>
-        <div id= '6' class= 'fouls'>
+        <div id= '4' class= 'fouls'>
         </div>
         <div id= '5' class= 'fouls'>
         </div>
-        <div id= '4' class= 'fouls'>
+        <div id= '6' class= 'fouls'>
         </div>
+        <div id= '7' class= 'fouls'>
+        </div>
+        <div id= 'undo'></div>
     </div>
 
     </div>
@@ -49,7 +50,7 @@
       </h4>
       <h1 id = 'player2Score'>0</h1>
       <br>
-      <h5>Current Beak:</h5>
+      <h5>Current Break:</h5>
       <h3 id= 'currentBreak2'></h3>
     </span>
   </div>
